[tool.poetry]
name = "kicksaw-integration-utils"
version = "2.2.1"
description = "A set of helper functions for CSV to Salesforce procedures, with reporting in AWS S3"
readme = "README.md"
repository = "https://github.com/Kicksaw-Consulting/kicksaw-integration-utils"
authors = [
    "Alex Drozd <drozdster@gmail.com>",
    "Tim Sabat <tim@kicksaw.com>",
    "George Bocharov <george@kicksaw.com>"
]
keywords = ["kicksaw", "aws", "s3", "sqs", "simple salesforce", "csv"]
packages = [
    { include = "kicksaw_integration_utils" }
]

[tool.poetry.dependencies]
python = "^3.8"
simple-salesforce = "^1.10.1"
boto3 = "^1.17.3"
pydantic = "^1.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
simple-mockforce = "^0.4.2"
moto = "^4.0.2"
pytest-cov = "^3.0.0"

[tool.poetry.group.lint.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
pylint = "^2.15.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_between_types = 1

[tool.pylint.'MASTER']
fail-under = 8.0
extension-pkg-allow-list = "pydantic"

[tool.pytest.ini_options]
addopts = "-v --cov=kicksaw_integration_utils --cov-report=term"
testpaths = [
    "tests",
]
