[tool.poetry]
name = "kicksaw-integration-utils"
version = "2.3.0"
description = "A set of helper functions for CSV to Salesforce procedures, with reporting in AWS S3"
readme = "README.md"
repository = "https://github.com/Kicksaw-Consulting/kicksaw-integration-utils"
authors = [
    "Alex Drozd <alex@kicksaw.com>",
    "Tim Sabat <tim@kicksaw.com>",
    "George Bocharov <george@kicksaw.com>"
]
keywords = ["kicksaw", "aws", "s3", "sqs", "simple salesforce", "csv"]
packages = [
    { include = "kicksaw_integration_utils" }
]

[tool.poetry.dependencies]
python = "^3.8"
simple-salesforce = "^1.10.1"
boto3 = "^1.17.3"
pydantic = "^1.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
simple-mockforce = "^0.4.2"
moto = "^4.0.2"
pytest-cov = "^3.0.0"

[tool.poetry.group.lint.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
pylint = "^2.15.0"
mypy = "^0.971"

[tool.poetry.group.typing.dependencies]
boto3-stubs = {extras = ["essential"], version = "^1.24.66"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_between_types = 1

[tool.pylint.'MASTER']
fail-under = 8.0
extension-pkg-allow-list = "pydantic"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "useless-super-delegation",
]

[tool.pytest.ini_options]
addopts = "-v --cov=kicksaw_integration_utils --cov-report=term --cov-report=xml --cov-report=html"
testpaths = [
    "tests",
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'def __repr__',
    'assert',
]
precision = 1
skip_empty = true
sort = "-Cover"
